--- a/app/src/main/res/layout/fragment_detail_category.xml
+++ b/app/src/main/res/layout/fragment_detail_category.xml
@@ -22,4 +22,11 @@
         android:layout_height="wrap_content"
         android:text="@string/category_description" />
 
+    <Button
+        android:id="@+id/btn_profile"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/to_home"
+        />
+
 </LinearLayout>
